fixed some deprecated api, added a gradle build thing so don't have to build artifacts now